@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    #550, ensure you reset to before the slop before writing
     If the witness table is completely corrupt give a better error
     Make storage work with exceptions whose messages raise errors
     Journal error conditions, to ensure they don't repeat
